--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Application\\": "module/Application/src/"
+            "Application\\": "module/Application/src/",
+            "Account\\": "module/Account/src/"
         }
     },
     "autoload-dev": {
